<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherPants</string>


    <string name="tempLabel">Current Conditions</string>

    <string name="action_settings">Settings</string>
    <string name="hourlytemp">Hourly Temperature</string>
    <string name="hotLabel">Too Hot</string>

    <string name="degrees">Degrees</string>
    <string name="coldLabel">Too Cold</string>
    <string name="directions">Enter your personal temp preferences below.</string>
    <string name="dang">There\'s no need to enter anything below zero. We can all agree that\'s too dang cold!</string>
    <string name="button">Done</string>
    <string name="ratebutton">Rate WeatherPants!</string>

    <string name="perfectLabel">Perfect</string>

    <string name="credit">Powered by Forecast API and Geonames API</string>
    <string name="Change">Change Temp settings</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="emailicon">SubmitPantsIdeas</string>
    <string name="yourIdea">Add your own Pants idea to the next update of Weather Pants!</string>
    <string name="pantsAddress">moreweatherpants@gmail.com</string>
    <string name="sendbutton">Send</string>
    <string name="instructions">Type in your Pants idea and send it to us. If you make us laugh we will use your idea! Remember to keep it fairly clean we\'re a medium maturity app. There is no payment or credit for submissions. If we use your idea we have the right to modify it if necessary.</string>
    <string name="SubmitPantsIdeas">Submit Pants Ideas</string>
    <string name="want">We want to hear from you!</string>

    <string name="feedbacktext">If you have any feedback on WeatherPants please let us know.  If you have any problems or just want to put in your 2 cents we want to hear about it.  Just click on the email address below and tell us what you think.</string>
    <string name="rate">Hey! If you like WeatherPants it would be cool if you would rate us and write a review!</string>
    <string name="share">Share</string>
    <string name="blazing">blazingadventurepants@gmail.com</string>


    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    <string name="connection_error_misconfigured">mis</string>
    <string name="connection_error_internal">internal</string>
    <string name="connection_error_invalid_account">invalid</string>
    <string name="connection_error_license_check_failed">failed</string>
    <string name="connection_error_network">netowrk</string>
    <string name="connection_error_needs_resolution">resolution</string>
    <string name="connection_error_disabled">disabled</string>
    <string name="connection_error_invalid">error</string>
    <string name="connection_error_missing">missing</string>
    <string name="connection_error_outdated">outdated</string>
    <string name="connection_error_sign_in_required">sign</string>
    <string name="connection_error_unknown">unknown</string>
    <string name="doneButton">Done</string>

</resources>
