<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settingbackground"
    android:orientation="vertical"
    android:background="@drawable/chalkboardbackground"
    >

    <ImageView
        android:id="@+id/directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:src="@drawable/directions"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />

    <Space
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/directions"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/space1"
        android:background="@drawable/hot"
        android:id="@+id/hotline"
        android:orientation="horizontal"
        android:weightSum="100"
        >

            <TextView
                android:id="@+id/hotLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotLabel"
                android:textSize="20sp"
                android:textColor="#1f052f"
                android:layout_weight="30"
                android:gravity="right"
                android:layout_gravity="center"/>

            <Space
                android:id="@+id/hotSpace1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="5"/>

            <EditText

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:gravity="bottom"
                android:textSize="14sp"
                android:id="@+id/hotNumber"
                android:textColor="#1f052f"
                android:layout_weight="30"
                android:inputType="number"
                android:maxLength="3"

                />

            <Space
                android:id="@+id/hotSpace2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degrees"
                android:textSize="20sp"
                android:textColor="#1f052f"
                android:id="@+id/degrees"
                android:layout_weight="30"
                android:gravity="left"
                android:layout_gravity="center"/>
    </LinearLayout>



    <Space
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/hotline"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/space2"
        android:background="@drawable/cold"
        android:id="@+id/coldline"
        android:orientation="horizontal"
        android:weightSum="100"
        >

        <TextView
            android:id="@+id/coldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coldLabel"
            android:textSize="20sp"
            android:textColor="#1f052f"
            android:layout_weight="25"
            android:gravity="right"
            android:layout_gravity="center"/>

        <Space
                    android:id="@+id/coldSpace1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="7"/>

        <EditText

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:layout_gravity="bottom"
                    android:textSize="14sp"
                    android:id="@+id/coldNumber"
                    android:textColor="#1f052f"
                    android:layout_weight="30"
                    android:inputType="number"
                    android:maxLength="3"
                    />

        <Space
                     android:id="@+id/coldSpace2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="6"/>

        <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degrees"
                    android:textSize="20sp"
                    android:textColor="#1f052f"
                    android:id="@+id/degrees1"
                    android:layout_weight="35"
                    android:gravity="left"
                    android:layout_gravity="center"/>
    </LinearLayout>

    <Space
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/coldline"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/space3"
        android:background="@drawable/perfect"
        android:id="@+id/perfectline"
        android:orientation="horizontal"
        android:layout_weight="10">

        <TextView
            android:id="@+id/perfectLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perfectLabel"
            android:textSize="20sp"
            android:textColor="#1f052f"
            android:layout_weight="40"
            android:gravity="right"
            android:layout_gravity="center"/>

        <Space
                    android:id="@+id/perfectSpace1"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="7"/>

        <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:id="@+id/perfectNumber"
                    android:textColor="#1f052f"
                    android:layout_weight="35"
                    android:gravity="bottom"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:maxLength="3"
                    />

        <Space
                    android:id="@+id/perfectSpace2"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="7"/>

        <TextView
                    android:id="@+id/degrees2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degrees"
                    android:textSize="20sp"
                    android:textColor="#1f052f"

                    android:layout_weight="35"
                    android:gravity="left"
                    android:layout_gravity="center"/>
    </LinearLayout>



    <Button
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_below="@+id/perfectline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"

        android:textSize="18sp"
        android:background="@drawable/donebutton"
        android:id="@+id/donebutton"
        android:layout_weight="5"
        android:textColor="#1f052f"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/donebutton"
        android:id="@+id/space4"
        android:layout_weight="5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/credit"
        android:gravity="center_horizontal" />


</RelativeLayout>